--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,57 +1,57 @@
 <!DOCTYPE html>
-<html>
+<html lang="PT-BR">
+
 <head>
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>Chat Tupi | Spring Boot + WebSocket</title>
-    <link rel="stylesheet" href="/css/main.css" />
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+	<title>Grupo Salão</title>
+	<link rel="stylesheet" href="/css/main.css" />
 </head>
-<body background="maxresdefault.jpg"
-      style="background-position: center; background-repeat: no-repeat; background-size: cover;">
-<noscript>
-    <h2>Opa! Parece que este browser não suporta JavaScript</h2>
-</noscript>
 
-<div id="username-page">
-    <div class="username-page-container">
-        <h1 class="title">Digite seu nome</h1>
-        <form id="usernameForm" name="usernameForm">
-            <div class="form-group">
-                <input type="text" id="name" placeholder="Nome"
-                       autocomplete="off" class="form-control" />
-            </div>
-            <div class="form-group">
-                <button type="submit" class="accent username-submit">Comece a conversar</button>
-            </div>
-        </form>
-    </div>
-</div>
+<body style="background-position: center; background-repeat: no-repeat; background-size: cover;">
+	<noscript>
+		<h2>Opa! Parece que este browser não suporta JavaScript</h2>
+	</noscript>
 
-<div id="chat-page" class="hidden">
-    <div class="chat-container">
-        <div class="chat-header">
-            <h2>ChatBox Tupi</h2>
-        </div>
-        <div class="connecting">Conectando ao chat...</div>
-        <ul id="messageArea">
+	<div id="username-page">
+		<div class="username-page-container">
+			<h1 class="title">Digite seu nome</h1>
+			<form id="usernameForm" name="usernameForm">
+				<div class="form-group">
+					<input type="text" id="name" placeholder="Nome" autocomplete="off" class="form-control" />
+				</div>
+				<div class="form-group">
+					<button type="submit" class="accent username-submit">Comece a conversar</button>
+				</div>
+			</form>
+		</div>
+	</div>
 
-        </ul>
-        <form id="messageForm" name="messageForm" nameForm="messageForm">
-            <div class="form-group">
-                <div class="input-group clearfix">
-                    <input type="text" id="message" placeholder="Digite uma mensagem..."
-                           autocomplete="off" class="form-control" />
-                    <button type="submit" class="primary">Enviar</button>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
+	<div id="chat-page" class="hidden">
+		<div class="chat-container">
+			<div class="chat-header">
+				<h2>Chat</h2>
+			</div>
+			<div class="connecting">Conectando ao chat...</div>
+			<ul id="messageArea">
 
-<script
-        src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
-<script
-        src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
-<script src="/js/main.js"></script>
+			</ul>
+			<form id="messageForm" name="messageForm" nameForm="messageForm">
+				<div class="form-group">
+					<div class="input-group clearfix">
+						<input type="text" id="message" placeholder="Digite uma mensagem..." autocomplete="off"
+							class="form-control" />
+						<button type="submit" class="primary">Enviar</button>
+					</div>
+				</div>
+			</form>
+		</div>
+	</div>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+	<script src="/js/main.js"></script>
 </body>
-</html>
+
+</html lang="PT-BR">
